test_regress/t/t_trace_dumpvars_missing4.out
%Error: t/t_trace_dumpvars.v:266:5: $dumpvars target not found: t.sub_a.missing
  266 |     $dumpvars(0, t.sub_a.missing);
      |     ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
